[gd_scene format=4 uid="uid://dn0r7723xc1p"]

[ext_resource type="Script" uid="uid://btjiu8gsn1wmv" path="res://combat.gd" id="1_kx3u1"]
[ext_resource type="PackedScene" uid="uid://vivbwy15jqep" path="res://barricade.tscn" id="2_ga4lu"]
[ext_resource type="PackedScene" uid="uid://dd4l57rwjq1c" path="res://player.tscn" id="3_u30h6"]
[ext_resource type="Texture2D" uid="uid://d23xb2oupnxa5" path="res://sprites/bush.png" id="4_ga4lu"]
[ext_resource type="Texture2D" uid="uid://bhi8v2l44hhom" path="res://sprites/sun.png" id="5_u30h6"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_u30h6"]
texture = ExtResource("4_ga4lu")
0:0/0 = 0

[sub_resource type="TileSet" id="TileSet_fvoc2"]
sources/0 = SubResource("TileSetAtlasSource_u30h6")

[sub_resource type="Curve2D" id="Curve2D_h2yge"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 800, 192, 0, 0, 0, 0, 800, 536)
}
point_count = 2

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kx3u1"]
size = Vector2(801, 129)

[node name="Combat" type="Node" unique_id=1312297838]
script = ExtResource("1_kx3u1")

[node name="Bushes" type="TileMapLayer" parent="." unique_id=737478532]
z_index = 1
tile_map_data = PackedByteArray("AAAAAAsAAAAAAAAAAAABAAsAAAAAAAAAAAACAAsAAAAAAAAAAAADAAsAAAAAAAAAAAAEAAsAAAAAAAAAAAAFAAsAAAAAAAAAAAAGAAsAAAAAAAAAAAAHAAsAAAAAAAAAAAAIAAsAAAAAAAAAAAAJAAsAAAAAAAAAAAAKAAsAAAAAAAAAAAALAAsAAAAAAAAAAAAMAAsAAAAAAAAAAAANAAsAAAAAAAAAAAAOAAsAAAAAAAAAAAAPAAsAAAAAAAAAAAAQAAsAAAAAAAAAAAARAAsAAAAAAAAAAAASAAsAAAAAAAAAAAATAAsAAAAAAAAAAAAUAAsAAAAAAAAAAAAVAAsAAAAAAAAAAAAWAAsAAAAAAAAAAAAXAAsAAAAAAAAAAAAYAAsAAAAAAAAAAAAZAAsAAAAAAAAAAAAaAAsAAAAAAAAAAAAbAAsAAAAAAAAAAAAcAAsAAAAAAAAAAAAdAAsAAAAAAAAAAAAeAAsAAAAAAAAAAAAfAAsAAAAAAAAAAAAgAAsAAAAAAAAAAAAhAAsAAAAAAAAAAAAiAAsAAAAAAAAAAAAjAAsAAAAAAAAAAAAkAAsAAAAAAAAAAAAlAAsAAAAAAAAAAAAmAAsAAAAAAAAAAAAnAAsAAAAAAAAAAAAoAAsAAAAAAAAAAAApAAsAAAAAAAAAAAAqAAsAAAAAAAAAAAArAAsAAAAAAAAAAAAsAAsAAAAAAAAAAAAtAAsAAAAAAAAAAAAuAAsAAAAAAAAAAAAvAAsAAAAAAAAAAAAwAAsAAAAAAAAAAAAxAAsAAAAAAAAAAAA=")
tile_set = SubResource("TileSet_fvoc2")

[node name="Background" type="ColorRect" parent="." unique_id=599924847]
offset_right = 800.0
offset_bottom = 192.0
color = Color(0.7462093, 0.92905694, 0.9933384, 1)

[node name="Ground" type="ColorRect" parent="." unique_id=1862806789]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 192.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.17510256, 0.34872743, 0.2474212, 1)

[node name="Barricade" parent="." unique_id=1010004601 instance=ExtResource("2_ga4lu")]
position = Vector2(320, 64)

[node name="Sprite" parent="Barricade" index="0" unique_id=1344042694]
position = Vector2(-16, 332)
scale = Vector2(0.75, 3.1875)

[node name="Collision" parent="Barricade" index="1" unique_id=1776921890]
position = Vector2(-16, 332)

[node name="Player" parent="." unique_id=885266496 instance=ExtResource("3_u30h6")]
z_index = 1
position = Vector2(216, 264)

[node name="ZombieTimer" type="Timer" parent="." unique_id=304221522]
wait_time = 1.5
autostart = true

[node name="ZombieSpawnPath" type="Path2D" parent="." unique_id=56149562]
curve = SubResource("Curve2D_h2yge")

[node name="ZombieSpawnLocation" type="PathFollow2D" parent="ZombieSpawnPath" unique_id=1844207156]
position = Vector2(800, 192)
rotation = 1.5707964

[node name="VBoxContainer" type="VBoxContainer" parent="." unique_id=587626036]
z_index = 1
offset_right = 135.0
offset_bottom = 77.0

[node name="LevelLabel" type="Label" parent="VBoxContainer" unique_id=290008588]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Level: 1"

[node name="BarricadeLabel" type="Label" parent="VBoxContainer" unique_id=521777446]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Barricade: 100"

[node name="ZombiesKilledLabel" type="Label" parent="VBoxContainer" unique_id=1901526833]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Zombies Killed : 0"

[node name="SkyBlock" type="StaticBody2D" parent="." unique_id=1856819170]
collision_layer = 2
collision_mask = 0

[node name="Collision" type="CollisionShape2D" parent="SkyBlock" unique_id=407967000]
position = Vector2(399.5, 63.5)
shape = SubResource("RectangleShape2D_kx3u1")

[node name="Sun" type="Sprite2D" parent="." unique_id=312884086]
position = Vector2(760, 38.5)
scale = Vector2(0.625, 0.6015625)
texture = ExtResource("5_u30h6")

[connection signal="timeout" from="ZombieTimer" to="." method="_on_zombie_spawner_timeout"]

[editable path="Barricade"]
